Avoid deprecation warnings with Zeek >= 4.2.
Also includes a bug fix triggering an internal error when no
`{protocol,analyzer}_confirmation` event handler is defined.

Also add Zeek 4.2 to CI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,15 +182,17 @@ endif ()
 spicy_include_directories(${_plugin_lib} PRIVATE)
 set_property(TARGET ${_plugin_lib} PROPERTY ENABLE_EXPORTS true)
 
-# Remove any old Zeek_Spicy.so left-over from previous versions.
-get_property(plugin_dir TARGET ${_plugin_lib} PROPERTY LIBRARY_OUTPUT_DIRECTORY)
-set(old_plugin_location
-    "${plugin_dir}/_Zeek-Spicy.${HOST_ARCHITECTURE}${CMAKE_SHARED_MODULE_SUFFIX}")
-add_custom_command(
-    TARGET ${_plugin_lib}
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E remove -f "${old_plugin_location}"
-    COMMENT "")
+if (NOT ZEEK_SPICY_PLUGIN_INTERNAL_BUILD)
+    # Remove any old Zeek_Spicy.so left-over from previous versions.
+    get_property(plugin_dir TARGET ${_plugin_lib} PROPERTY LIBRARY_OUTPUT_DIRECTORY)
+    set(old_plugin_location
+        "${plugin_dir}/_Zeek-Spicy.${HOST_ARCHITECTURE}${CMAKE_SHARED_MODULE_SUFFIX}")
+    add_custom_command(
+        TARGET ${_plugin_lib}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E remove -f "${old_plugin_location}"
+        COMMENT "")
+endif ()
 
 ####
 #### Prepare the plugin build directory so that it resembles our installation layout.
