--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,6 +16,9 @@ zkg_ubuntu_task:
       - docker_arguments:
         - ZEEK_LTS: 1
         - ZEEK_VERSION: 4.0.3-0
+      - docker_arguments:
+        - ZEEK_LTS:
+        - ZEEK_VERSION: 4.2.0-0
     cpu: 2
     memory: 8G
 
